@@ -2,6 +2,7 @@
 	* "string".encode("hex") replaced with format strings instead--
 	  sumiserv should now run compiled on Win32
 	* updated docs about Windows XP SP2
+	* sumiserv checks pack number
 
 2004-09-08 Jeff Connelly <jeffconnelly@users.sourceforge.net>
 	* broadcasting - send to multiple clients simultaneously (beta),
